# zettelforge

./: .env.honcho  .env.honcho.hybrid  .gitignore  .nudge_state.json  .signaldeck_key  404.html  AGENTS.md  ARCHITECTURE.md  BOOT.md  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  HEARTBEAT.md  IDENTITY.md  LICENSE  LICENSE-ENTERPRISE  MANIFEST.in  MEMORY.md  MEMORY.md.backup  PACKAGE_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SOUL.md  THIRD_PARTY_NOTICES  TODO.md  TOOLS.md  USER.md  USER.md.backup  architecture.md  config.default.yaml  config.example.yaml  detailed_cti_test.sh  direct_ingest.py  (+14 more)
.claude/: memory-coengineer-prompt.md
.clawhub/: lock.json
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.openclaw/: workspace-state.json
THREAT_MODEL/: index.html
archive/: index.html
benchmarks/: BENCHMARK_REPORT.md  LOCOMO_BENCHMARK_COMPARISON.md  auto_ralph.py  benchmark_harness.py  cti_benchmark_v2.py  cti_retrieval_benchmark.py  cti_retrieval_results.json  cti_v2_results.json  ctibench_benchmark.py  ctibench_results.json  dataset.json  evolve_benchmark.py  evolve_results.json  graph_test.py  locomo_benchmark.py  locomo_results.json  locomo_results_v1.3.0_baseline.json  memoryagentbench.py  memoryagentbench_results.json  mempalace_benchmark.py  mempalace_results.json  naive_memory.py  opencti_benchmark.py  ragas_benchmark.py  ragas_cti_results.json  ragas_results.json  scale_benchmark.py  scale_results.json
docker/: docker-compose.yml
docs/: THREAT_MODEL.md  api-spec.md  architecture-diagram.mmd  human-evaluation-rubric.md  index.md  llms.txt
drafts/: 12pm-engagement-2026-03-31.md  2026-03-30-1200-engagement-thread.md  2026-03-30-1200-kev-thread.md  2026-03-30-1800-engagement-thread.md  2026-03-31-1200-handala-draft.md  6pm-engagement-2026-03-31.md  alert_drafts_20260404.md  alert_drafts_20260405.md  post-drafts-20260331.md
examples/: athf_bridge.py  crewai_cti_crew.py  mcp_claude_code.md  quickstart.py
fleet/: growth-plan-vigil-nexus.md  patton_daily.md  social_ammo.md  vault_agent_onboarding.md
governance/: controls.yaml
human-evaluation-rubric/: index.html
landing-page/: index.html
memory/: .gitignore  .seen_alerts.json  2026-03-19-darkweb-observatory.md  2026-03-19-threat-intel-build.md  2026-03-19.md  2026-03-20-cti-content-schedule.md  2026-03-20-cve-enrichment.md  2026-03-20-ollama-fix.md  2026-03-20-taxii-feed-setup.md  2026-03-20-threat-alerts.md  2026-03-20.md  2026-03-21.md  2026-03-23.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01-1s-31-status-report-note-the-u.md  2026-04-01-tamara-bot-routing.md  2026-04-01.md  2026-04-02-amem-prd-review.md  2026-04-02-heartbeat-status.md  2026-04-02-skill-install.md  2026-04-02.md  2026-04-03-1236.md  2026-04-03-1358.md  2026-04-03-1855.md  2026-04-03-2211.md  2026-04-03-content-performance-analysis.md  2026-04-03-fleet-growth.md  2026-04-03-heartbeat-check.md  2026-04-03-prd-test-count-discrepancy.md  2026-04-03.md  2026-04-04-telegram-routing-diagnosis.md  2026-04-04.md  2026-04-05-agent-qa-test.md  2026-04-05.md  2026-04-06-heartbeat-ok.md  2026-04-06-x-post-fail.md  2026-04-06.md  2026-04-07-elasticsearch-logs.md  (+105 more)
notes/: cti-improvements.md  dgx-spark-specs.md  fleetspeak.md  hermes-learning-checklist.md  merged-memory-architecture.md  open-loops.md  openclaw-multi-agent.md  opencti-migration.md  signaldeck-deployment.md
opencti_import/: actors.csv  alerts.csv  cves.csv  stix_export.json
research/: ti-mindmap-hub-analysis.md
scripts/: build_llama_server.sh  check_llama_setup.sh  fleet_sync.sh  frames-to-gif.py  migrate_jsonl_to_sqlite.py  ralph_initiator.sh  rebuild_index.py  record-demo-playwright.js  record-demo.sh  signaldeck_agent_template.py  signaldeck_bridge.py  signaldeck_patton.py  signaldeck_patton_intelligent.py  start_llama_server.sh  typedb-setup.sh  vault-setup.sh  vault_helper.py  zettelforge-rebuild.service  zettelforge-rebuild.timer
search/: search_index.json
skills/: claude-code-skill.md  openclaw-skill.md
stylesheets/: brand-tokens.css
tasks/: agentic-memory-thesis.md  benchmark-strategic-briefing.md  (+10 more)
threatrecall-api/: .dockerignore  .gitignore  CHANGES_2026-04-03.md  DEVELOPMENT_STATUS.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  public.key  pyproject.toml  requirements.txt  run_dev.py
threatrecall-api/.azure/: deployment-plan.md
threatrecall-api/.github/: dependabot.yml
threatrecall-api/.github/workflows/: ci.yml  deploy.yml  docker.yml
threatrecall-api/amem/: embedding_utils.py  link_generator.py  memory_evolver.py  memory_manager.py  note_constructor.py  vector_retriever.py
threatrecall-api/amem/memory/: graph_retriever.py  ontology_schema.json  ontology_validator.py  synthesis_schema.json  synthesis_validator.py  temporal_graph_retriever.py  temporal_knowledge_graph.py
threatrecall-api/docs/: ARCHITECTURE.md  BACKUP.md  MONITORING.md  SECRETS.md
threatrecall-api/k8s/: README.md
threatrecall-api/k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml
threatrecall-api/k8s/overlays/production/: backup-schedule.yaml  grafana-dashboard.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  restore-example.yaml  secret-provider-class.yaml  servicemonitor.yaml
threatrecall-api/k8s/overlays/staging/: kustomization.yaml
threatrecall-api/load-tests/: README.md  load-test.js  soak-test.js  stress-test.js
threatrecall-api/src/threatrecall_api/: __init__.py  main.py
threatrecall-api/src/threatrecall_api/api/: dependencies.py
threatrecall-api/src/threatrecall_api/api/middleware/: audit.py  rate_limit.py
threatrecall-api/src/threatrecall_api/api/routes/: memory.py  tenant.py
threatrecall-api/src/threatrecall_api/core/: config.py  logging.py  ocsf_logger.py  secrets.py  tenant_storage.py
threatrecall-api/src/threatrecall_api/models/: common.py  note.py  tenant.py
threatrecall-api/tests/integration/: test_integration.py
threatrecall-api/tests/unit/: test_api.py
(+470 files in other folders)
