[project]
name = "threatrecall-api"
version = "1.0.0"
description = "ThreatRecall Memory-as-a-Service API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.0.0",
    "python-multipart>=0.0.20",
    "hvac>=1.2.0",
    "lancedb>=0.18.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "UP", "SIM", "RUF", "N", "ANN", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
